--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<title><h1>MINECRAFT LORE</h1></title><H2>SORRY FOR ONLY 1 WEBPAGE . THIS IS MY FIRST WEBSITE . I AM A NOOB AT PROGRAMING. SO I AM VERY SORRY .</H2><H1>TOP 5 SPINE CHILLING MINECRAFT HORROR STORIES ACCORDING TO YUSUF M. ABOELEZZ</H1>
+<body style="background-color:black; color:red;padding:24px 48px">
+    <title><h1>MINECRAFT LORE</h1></title><H2>SORRY FOR ONLY 1 WEBPAGE . THIS IS MY FIRST WEBSITE . I AM A NOOB AT PROGRAMING. SO I AM VERY SORRY .</H2><H1>TOP 5 SPINE CHILLING MINECRAFT HORROR STORIES ACCORDING TO YUSUF M. ABOELEZZ</H1>
 <HR>
 
 <HR>
     
 <H1>ENTITY 303</H1> 
-<h4>
+<div style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;padding: 32px; line-height:150%">
 The following is an email from Frankie, the first person to encounter Entity 303, that was suppose to go to Speed, the first person to ever speak out about 303. Frankie's email has since been deleted.
 
 Date Email Sent: December 11th, 2013
@@ -34,7 +35,7 @@ After about 20 minutes of comforting John’s mother, I leave to go check on Vin
 If you get this email, Speed, and if you ever encounter “303” again, I want you to quickly close out of your Minecraft and shut down your computer. I don’t want you to end up like Vincent or John. Please be careful……if I get
 
 more information, I’ll contact you immediately. Good luck.<A HREF="https://www.youtube.com/watch?v=ph_scey_xhY&ab_channel=RejectedShotgun">303 VIDEO</A>
-</h4><IMG SRC="https://th.bing.com/th/id/R.8f6ee2aa177f788be0023d2496fab9e9?rik=Uf5KnFaVA8ZEhw&pid=ImgRaw&r=0&adlt=strict"/'>'
+</div><IMG SRC="https://th.bing.com/th/id/R.8f6ee2aa177f788be0023d2496fab9e9?rik=Uf5KnFaVA8ZEhw&pid=ImgRaw&r=0&adlt=strict"/'>'
 <h1>GIANT ALEX</h1>
 <h4>This player is unknown . He translated the phrase "death Steve" into a decimal code for fun and used it as a seed, and that is how he found Giant Alex. He has a screenshot and it's right here</H4>
     <img src="https://i.ytimg.com/vi/NeJVzriv-1E/maxresdefault.jpg"/>
@@ -89,3 +90,4 @@ more information, I’ll contact you immediately. Good luck.<A HREF="https://www
                     
                     I couldn't move my player, it was stuck in one position, staring at the entity. Then, my screen went black, and then blue, then finally ending on the Minecraft screen. It had crashed my game. I went to saves so I could delete the world but, it was already erased from the saves folder. I haven't seen this entity since...</H4>
                     <img src="https://th.bing.com/th/id/R.c432f014c239e0feb763217ad15520a7?rik=Z%2fIhGBps8ovOYA&pid=ImgRaw&r=0&adlt=strict"/>
+</body>
